[package]
name = "webp_codec_native"
version = "0.1.0"
description = "Rust side of WebPCodec"
authors = ["Clazex <clazex.y@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false
homepage = "https://github.com/Clazex/webp_codec_native#readme"
repository = "https://github.com/Clazex/webp_codec_native/"

[lib]
crate-type = ["cdylib"]

[dependencies]
libwebp-sys = { version = "0.8.0", features = ["avx2", "sse41"] }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
codegen-units = 1
strip = true
